# aliexpress-clone

./: .gitignore  Why-Leaving.md  important.txt  pyproject.toml  response.json  run_servers.py
aliexpress-api/aliexpressapi/: Menu.py  pyproject.toml  webhooks.md
aliexpress-api/aliexpressapi/Fixtures/: homepage_fixture.json  products_fixture.json
aliexpress-api/aliexpressapi/apps/carts/: admin.py  apps.py  archetech.md  signals.py  views.py
aliexpress-api/aliexpressapi/apps/carts/context/: unit_of_work.py
aliexpress-api/aliexpressapi/apps/carts/domain/: cart_entity.py  cart_item_entity.py
aliexpress-api/aliexpressapi/apps/carts/models/: cart.py
aliexpress-api/aliexpressapi/apps/carts/repositories/: cart_repository.py
aliexpress-api/aliexpressapi/apps/carts/services/: cart_merge_service.py  cart_service.py
aliexpress-api/aliexpressapi/apps/carts/utils/: session.py
aliexpress-api/aliexpressapi/apps/checkout/: urls copy.py  urls.py  views.py
aliexpress-api/aliexpressapi/apps/checkout/repositories/: checkout_repository.py
aliexpress-api/aliexpressapi/apps/checkout/services/: checkout_service.py
aliexpress-api/aliexpressapi/apps/checkout/webhooks/: stripe.py
aliexpress-api/aliexpressapi/apps/order/: admin.py  apps.py  views.py
aliexpress-api/aliexpressapi/apps/order/models/: order.py  order_item.py
aliexpress-api/aliexpressapi/apps/payments/: admin.py  tasks.py  views.py
aliexpress-api/aliexpressapi/components/idempotency/: service.py
aliexpress-api/aliexpressapi/configs/: urls.py
aliexpress-api/aliexpressapi/configs/settings/: base.py
(+80 files in other folders)
