[project]
name = "aliexpress-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==6.0",
    "django-cors-headers>=4.7.0",
    "django-nested-admin>=4.1.4",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt[token-blacklist]>=5.5.1",
    "drf-nested-routers>=0.95.0",
    "drf-spectacular>=0.28.0",
    "factory-boy>=3.3.3",
    "faker>=37.5.3",
    "inflect>=7.5.0",
    "pillow>=11.3.0",
    "psutil>=7.1.3",
    "psycopg2>=2.9.11",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
]

[tool.uv.workspace]
members = [
    "aliexpressapi",
]
